--- a/site/index.html
+++ b/site/index.html
@@ -64,9 +64,9 @@
           <p class="news">
             <span data-i18n-en="new" data-i18n-ko="new">new</span>
             <span
-              data-i18n-en="Discode 0.2.5 tightens shared-session TUI with current-window project focus."
-              data-i18n-ko="Discode 0.2.5는 공유 세션 TUI를 개선해 현재 창의 프로젝트에 더 정확히 집중합니다."
-              >Discode 0.2.5 tightens shared-session TUI with current-window project focus.</span
+              data-i18n-en="Discode 0.2.6 adds upgrade prompts and one-step daemon refresh for smoother updates."
+              data-i18n-ko="Discode 0.2.6은 업그레이드 안내와 원스텝 데몬 재시작으로 업데이트를 더 간편하게 만듭니다."
+              >Discode 0.2.6 adds upgrade prompts and one-step daemon refresh for smoother updates.</span
             >
           </p>
           <h1 data-i18n-en="Your ultimate IDE is a messenger." data-i18n-ko="당신의 궁극의 IDE는 메신저입니다.">
