chore(release): update landing note for v0.4.1
Refresh the homepage new badge copy to describe the 0.4.1 release highlights before publishing release artifacts.

--- a/site/index.html
+++ b/site/index.html
@@ -64,9 +64,9 @@
           <p class="news">
             <span data-i18n-en="new" data-i18n-ko="new">new</span>
             <span
-              data-i18n-en="Discode 0.4.0 delivers a full CLI and bridge refactor with unified policies, stronger safety tests, and clearer module boundaries."
-              data-i18n-ko="Discode 0.4.0은 통합 정책, 강화된 안전 테스트, 명확한 모듈 경계를 포함한 CLI/브리지 전면 리팩토링을 제공합니다."
-              >Discode 0.4.0 delivers a full CLI and bridge refactor with unified policies, stronger safety tests, and clearer module boundaries.</span
+              data-i18n-en="Discode 0.4.1 improves startup reliability with a TUI launch fix and adds one-click install command copy buttons across the landing and docs pages."
+              data-i18n-ko="Discode 0.4.1은 TUI 실행 안정성을 개선하고 랜딩/문서 페이지에 설치 명령어 원클릭 복사 버튼을 추가합니다."
+              >Discode 0.4.1 improves startup reliability with a TUI launch fix and adds one-click install command copy buttons across the landing and docs pages.</span
             >
           </p>
           <h1 data-i18n-en="Your ultimate IDE is a messenger." data-i18n-ko="당신의 궁극의 IDE는 메신저입니다.">
