--- a/site/index.html
+++ b/site/index.html
@@ -64,11 +64,11 @@
         <section class="hero">
           <p class="news">
             <span data-i18n-en="new" data-i18n-ko="new">new</span>
-            <span
-              data-i18n-en="Discode 0.6.0 adds direct file transfer with discode send, hardens auto-TUI startup routing, and improves missing tmux target guidance."
-              data-i18n-ko="Discode 0.6.0은 discode send 직접 파일 전송을 추가하고, auto-TUI 시작 라우팅 안정성과 tmux 대상 누락 안내를 개선했습니다."
-              >Discode 0.6.0 adds direct file transfer with discode send, hardens auto-TUI startup routing, and improves missing tmux target guidance.</span
-            >
+              <span
+               data-i18n-en="Discode 0.6.2 keeps TUI project lists in sync without restart, clarifies local runtime path behavior, and adds a macOS lid-closed operation tip."
+               data-i18n-ko="Discode 0.6.2는 재시작 없이 TUI 프로젝트 목록 동기화를 개선하고, 로컬 런타임 경로 동작을 명확히 했으며, macOS 덮개 닫힘 실행 팁을 추가했습니다."
+               >Discode 0.6.2 keeps TUI project lists in sync without restart, clarifies local runtime path behavior, and adds a macOS lid-closed operation tip.</span
+             >
           </p>
           <h1 data-i18n-en="Your ultimate IDE is a messenger." data-i18n-ko="당신의 궁극의 IDE는 메신저입니다.">
             Your ultimate IDE is a messenger.
